--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Adam Smith
+description: Content designer based in London
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://smifaye.github.io
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+favicon_ico: "/assets/img/favicon.ico"
